recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: missing arguments for method subtree in class Tree;
follow this method with `_' if you want to treat it as a partially applied function
subtree
^